src/App.css
.imageDisplay {
  display: flex;
  flex-flow: row wrap;
  align-content: center;
  width: 1000px;
  height: 1000px;
  margin: auto;
}

.playlistDisplay {
  display: flex;
  flex-flow: row wrap;
  width: 800px;
  height: 800px;
  margin: auto;
  
}

.trackImage {
  width: 150px;
  height: 150px;
}

.trackDiv {
  flex-basis: 45%;
  text-align:center;
  display: flex;
  padding-right: 5%;
}

.body {
  background-color: #570A1C;
  color:#F0EAD1;
}

.buttonDisplay {
  height: 3vh;
  margin: auto;
  text-align: center;
}

.dateDisplay {
  text-align: center;
  font-size: 300%;
  padding-bottom: 50px;
  flex-basis: 100%;
  text-shadow: 2px 2px 8px #000000;
}

.trackText {
  text-align: left;
  padding-left: 10px;
  font-size: 125%;
}

.trackNumber {
  font-size: 200%;
  padding-right: 10px;
  text-shadow: 2px 2px 8px #000000;
}

